intro content included and aligned

--- a/index.html
+++ b/index.html
@@ -34,7 +34,27 @@
   </nav>
   
   <section class='intro'>
+  
+    <img src='img/first-background.jpg' class='intro-pic' >
+  
+    <div class='intro-content'>
+      <h1>Introducing Karma</h1>
+      <h3>Bring WiFi with you, everywhere you go.</h3>
+      <a href ='#'>Learn More</a>  
+    </div>
+
+  </section>
+  
+  <section class='middle'>
+    <div>
     
+      <h1>Everyone needs a little Karma</h1>
+      <ul>
+        <li>asdfasd</li>
+        <li>asdfasd</li>
+        <li>asdfasdf</li>
+      </ul>
+    </div>
   </section>
   
 </body>
