finished page, still need to tweak css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Karma</title>
   
   <link rel='stylesheet' type='text/css' href='css/normalize.css' >
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel='stylesheet' type='text/css' href='css/style.css' >
   
 </head>
@@ -46,16 +47,43 @@
   </section>
   
   <section class='middle'>
+  
     <div>
-    
-      <h1>Everyone needs a little Karma</h1>
+      <p>Everyone needs a little Karma.</p>
       <ul>
-        <li>asdfasd</li>
-        <li>asdfasd</li>
-        <li>asdfasdf</li>
+        <li>
+          <img src='img/icon-devices.jpg' >
+          <p class='middle-info'>Internet for all devices</p>
+        </li>
+        <li>
+          <img src='img/icon-coffee.jpg' >
+          <p class='middle-info'>Boost your production</p>
+        </li>
+        <li>
+          <img src='img/icon-refill.jpg' >
+          <p class='middle-info'>Pay as You Go</p>
+        </li>
       </ul>
     </div>
   </section>
+  
+  <footer>
+    <div class= 'footer-content'>
+      <p>Join us on</p>
+      <ul>
+        <li>
+          <i class='fa fa-twitter'></i>
+        </li>
+        <li>
+          <i class='fa fa-facebook'></i>
+        </li>
+        <li>
+          <i class='fa fa-instagram'></i>
+        </li>
+      </ul>
+      <p class='copyright'>&copy; Karma Mobility, Inc.</p>
+    </div>  
+  </footer>
   
 </body>
 
