finished css tweaking

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
       <div class='nav-links'>
         <ul>
-          <li>Meet Karma</li>
+          <li class='active'>Meet Karma</li>
           <li>How It Works</li>
           <li>Store</li>
           <li>Blog</li>
@@ -36,7 +36,6 @@
   
   <section class='intro'>
   
-    <img src='img/first-background.jpg' class='intro-pic' >
   
     <div class='intro-content'>
       <h1>Introducing Karma</h1>
