--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   
   <link rel='stylesheet' type='text/css' href='css/normalize.css' >
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" type="image/x-icon"  href="img/favicon.ico">
   <link rel='stylesheet' type='text/css' href='css/style.css' >
   
 </head>
@@ -17,7 +19,7 @@
     <div class='nav-container'>
 
       <div class='nav-logo'>
-        <img src = 'img/karma-logo.jpg' class='logo'>
+        <img src = 'img/karma-logo.jpg' alt='Karma' class='logo'>
       </div>
       
       <div class='nav-links'>
