--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <link rel='stylesheet' type='text/css' href='css/normalize.css' >
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" type="image/x-icon"  href="img/favicon.ico">
   <link rel='stylesheet' type='text/css' href='css/style.css' >
   
